--- a/index.html
+++ b/index.html
@@ -6,5 +6,26 @@
 		<title>Globe Roamer</title>
 		<link rel="stylesheet" href="styles.css" />
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<h1>Globe Roamer</h1>
+		</header>
+		<main class="grid-container">
+			<article class="featured">
+				<img
+					src="img/1.png"
+					alt="featured image of a man taking a photo of a woman "
+				/>
+				<div>
+					<h2>Balloon Magic</h2>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+						dolore iusto magnam sint eius numquam sit maxime ducimus nostrum
+						eaque dolor, optio laudantium quia sed voluptates dolorem.
+						Provident, aliquid ea.
+					</p>
+				</div>
+			</article>
+		</main>
+	</body>
 </html>
