Featured image change
feat: The featured image was replaced with a lower resolution/size image.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 		<main class="grid-container">
 			<article class="featured">
 				<img
-					src="img/1.png"
-					alt="featured image of a man taking a photo of a woman "
+					src="img/featured.webp"
+					alt="a man with a suitcase sitting on a bench at the airport"
 				/>
 				<div>
-					<h2>Balloon Magic</h2>
+					<h2>Where to next?</h2>
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
 						dolore iusto magnam sint eius numquam sit maxime ducimus nostrum
