Content and Styling
feat: All layout and placeholder text were added for the featured post and the other blog posts.

feat: The layout was done using using CSS Grid, and the styling of the articles was done, including the styling of the images.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,49 @@
 					alt="a man with a suitcase sitting on a bench at the airport"
 				/>
 				<div>
-					<h2>Where to next?</h2>
+					<h2>Where To Next?</h2>
 					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
-						dolore iusto magnam sint eius numquam sit maxime ducimus nostrum
-						eaque dolor, optio laudantium quia sed voluptates dolorem.
-						Provident, aliquid ea.
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+						temporibus ab quasi placeat maiores sit ullam veniam? Asperiores
+						adipisci impedit quia molestiae eligendi quisquam id quos
+						doloremque. Quos eaque earum, maiores enim repellendus dolor
+						distinctio.
+					</p>
+				</div>
+			</article>
+			<article>
+				<img
+					src="img/1.webp"
+					alt="a man taking a photo of a woman with a backdrop of hot air balloons in the sky"
+				/>
+				<div>
+					<h3>Balloon Magic</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+						saepe suscipit autem voluptatum quis ex deserunt quibusdam! Ex amet
+						nihil incidunt alias.
+					</p>
+				</div>
+			</article>
+			<article>
+				<img src="img/2.webp" alt="a yellow VW bus driving into a canyon" />
+				<div>
+					<h3>Road To Freedom</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sit
+						ea facilis laborum! Molestiae, ducimus commodi! Libero sapiente
+						nulla accusantium.
+					</p>
+				</div>
+			</article>
+			<article>
+				<img src="img/3.webp" alt="boats rowing on a clear blue lake" />
+				<div>
+					<h3>The Clear Blue</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
+						quisquam sit esse sapiente ducimus, quod ex rerum, animi similique
+						deserunt, fugit odit veritatis itaque ab.
 					</p>
 				</div>
 			</article>
