Footer and Styling
feat: A slogan was added to the header.

feat: Footer added with a link to the GitHub page of the creator.

feat: The footer was styled to match the rest of the page.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<header>
 			<h1>Globe Roamer</h1>
+			<p>Where Your Dreams Take Flight!</p>
 		</header>
 		<main class="grid-container">
 			<article class="featured">
@@ -64,5 +65,13 @@
 				</div>
 			</article>
 		</main>
+		<footer>
+			<p>
+				Created with ☕ and ❤️ by
+				<a href="https://github.com/HashtagDevM" target="_blank"
+					>Martin Flischman</a
+				>
+			</p>
+		</footer>
 	</body>
 </html>
